; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_css-parse.c_css_push_char.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_css-parse.c_css_push_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lexbuf = type { i32, i32* }

@.str = private unnamed_addr constant [15 x i8] c"token too long\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lexbuf*, i32)* @css_push_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @css_push_char(%struct.lexbuf* %0, i32 %1) #0 {
  %3 = alloca %struct.lexbuf*, align 8
  %4 = alloca i32, align 4
  store %struct.lexbuf* %0, %struct.lexbuf** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.lexbuf*, %struct.lexbuf** %3, align 8
  %6 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = add nsw i32 %7, 1
  %9 = load %struct.lexbuf*, %struct.lexbuf** %3, align 8
  %10 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  %12 = call i64 @nelem(i32* %11)
  %13 = trunc i64 %12 to i32
  %14 = icmp sge i32 %8, %13
  br i1 %14, label %15, label %18

15:                                               ; preds = %2
  %16 = load %struct.lexbuf*, %struct.lexbuf** %3, align 8
  %17 = call i32 @fz_css_error(%struct.lexbuf* %16, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  br label %18

18:                                               ; preds = %15, %2
  %19 = load i32, i32* %4, align 4
  %20 = load %struct.lexbuf*, %struct.lexbuf** %3, align 8
  %21 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  %23 = load %struct.lexbuf*, %struct.lexbuf** %3, align 8
  %24 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %24, align 8
  %27 = sext i32 %25 to i64
  %28 = getelementptr inbounds i32, i32* %22, i64 %27
  store i32 %19, i32* %28, align 4
  ret void
}

declare dso_local i64 @nelem(i32*) #1

declare dso_local i32 @fz_css_error(%struct.lexbuf*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
